version 1.5.2
-------------
* FIXED issue #158 Molecular Viewer and Elevation, Iso-Surface, and Scalar-Field plotters no longer crash MDANSE on Ubuntu 22
* FIXED issue #151 MDANSE should no longer interfere with system functionalities such as nano on Ubuntu 22

version 1.5.1
--------------
* ADDED issue #129 Installers for Ubuntu 22.x are now automatically generated and available for download
* FIXED issue #131 Importing MDANSE and other installed packages no longer raises exceptions
* FIXED issue #126 The error messages are now helpful when incorrect input is provided in fields like DL_POLY's 'aliases' that take Python object-like input
* CHANGED issue #127 The minimum size of Quick View in 2D/3D Plotter is now much smaller, allowing for resizing downwards

version 1.5.0
--------------
* ADDED issue #93 HDF5 format can now be used as output format of analyses as well as input for plotters
* ADDED issue #75 Added a new Units Editor window for handling unit definitions and expanded the range of unit conversions in plotters. The internal unit handling has been also rewritten
* ADDED issue #71 Trajectory files generated by MDANSE now contain units
* ADDED (internal) issue #68 The data used by plotters is now abstracted, allowing for easier implementation of different data format inputs
* ADDED issue #62 A new MDANSE script, mdanse_job, has been added which can be used to directly open the GUI window for a job
* ADDED issue #58 2 new plotters for visualising trajectory variables (configuration, velocities, and gradients) have been added
* ADDED issue #49 The new MDANSE User Guide is now accessible from the Help menu
* ADDED issue #45 Data Info now also lists the variables present in the trajectory
* ADDED issue #43 Gromacs converter can now be used to also convert TRR files. This creates a trajectory with velocities and gradients if present
* ADDED issue #26 Added velocity interpolation to Current Correlation Function